Fix horizontal scroll on mobile

--- a/source/assets/stylesheets/_base.scss
+++ b/source/assets/stylesheets/_base.scss
@@ -237,8 +237,10 @@ pre {
   }
 
   .mid-column-container {
+    width: 96%;
     left: 0;
     right: 0;
     margin: auto;
+    padding: 0;
   }
 }
